@@ -1,23 +1,28 @@
 package lk.ijse.poweralert.service.impl;
 
+import lk.ijse.poweralert.dto.AddressDTO;
+import lk.ijse.poweralert.dto.NotificationPreferenceDTO;
 import lk.ijse.poweralert.dto.UserCreateDTO;
 import lk.ijse.poweralert.dto.UserDTO;
+import lk.ijse.poweralert.entity.Address;
+import lk.ijse.poweralert.entity.NotificationPreference;
 import lk.ijse.poweralert.entity.User;
 import lk.ijse.poweralert.repository.UserRepository;
 import lk.ijse.poweralert.service.UserService;
+import org.hibernate.Hibernate;
 import org.modelmapper.ModelMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-
-import jakarta.persistence.EntityNotFoundException;
 import org.springframework.transaction.annotation.Transactional;
 
+import jakarta.persistence.EntityNotFoundException;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserService {
@@ -39,6 +44,7 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
+    @Transactional
     public UserDTO registerUser(UserCreateDTO userCreateDTO) {
         logger.info("Registering new user with username: {}", userCreateDTO.getUsername());
 
@@ -62,30 +68,85 @@ public class UserServiceImpl implements UserService {
         logger.info("User registered with ID: {}", savedUser.getId());
 
         // Map to DTO and return
-        return convertToDTO(savedUser);
+        return convertToBasicDTO(savedUser);
     }
 
-
     @Override
+    @Transactional(readOnly = true)
     public UserDTO getUserByEmail(String email) {
         logger.info("Fetching user with email: {}", email);
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new EntityNotFoundException("User not found with email: " + email));
 
-        return convertToDTO(user);
+        return convertToBasicDTO(user);
     }
 
     @Override
     @Transactional(readOnly = true)
     public UserDTO getUserByUsername(String username) {
         logger.info("Fetching user with username: {}", username);
-        User user = userRepository.findByUsernameWithCollections(username)
-                .orElseThrow(() -> new EntityNotFoundException("User not found with username: " + username));
+        User user = getUserEntityByUsername(username);
+
+        // Explicitly initialize the collections to avoid lazy loading issues
+        if (!Hibernate.isInitialized(user.getAddresses())) {
+            Hibernate.initialize(user.getAddresses());
+        }
+
+        if (!Hibernate.isInitialized(user.getNotificationPreferences())) {
+            Hibernate.initialize(user.getNotificationPreferences());
+        }
 
         return convertToDTO(user);
     }
 
     @Override
+    @Transactional(readOnly = true)
+    public UserDTO getUserBasicInfo(String username) {
+        logger.info("Fetching basic info for user with username: {}", username);
+        User user = getUserEntityByUsername(username);
+
+        // Do not initialize collections
+        return convertToBasicDTO(user);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<AddressDTO> getUserAddresses(Long userId) {
+        logger.info("Fetching addresses for user ID: {}", userId);
+
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new EntityNotFoundException("User not found with ID: " + userId));
+
+        // Initialize the addresses collection if it hasn't been initialized
+        if (!Hibernate.isInitialized(user.getAddresses())) {
+            Hibernate.initialize(user.getAddresses());
+        }
+
+        return user.getAddresses().stream()
+                .map(address -> modelMapper.map(address, AddressDTO.class))
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<NotificationPreferenceDTO> getUserNotificationPreferences(Long userId) {
+        logger.info("Fetching notification preferences for user ID: {}", userId);
+
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new EntityNotFoundException("User not found with ID: " + userId));
+
+        // Initialize the notification preferences collection if it hasn't been initialized
+        if (!Hibernate.isInitialized(user.getNotificationPreferences())) {
+            Hibernate.initialize(user.getNotificationPreferences());
+        }
+
+        return user.getNotificationPreferences().stream()
+                .map(pref -> modelMapper.map(pref, NotificationPreferenceDTO.class))
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
     public User getUserEntityByUsername(String username) {
         logger.info("Fetching user entity with username: {}", username);
         return userRepository.findByUsername(username)
@@ -98,6 +159,7 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
+    @Transactional
     public void updateLastLogin(String email) {
         logger.info("Updating last login time for user with email: {}", email);
         User user = userRepository.findByEmail(email)
@@ -108,25 +170,28 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public UserDTO getUserById(Long id) {
         logger.info("Fetching user with ID: {}", id);
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("User not found with ID: " + id));
 
-        return convertToDTO(user);
+        return convertToBasicDTO(user);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<UserDTO> getAllUsers() {
         logger.info("Fetching all users");
         List<User> users = userRepository.findAll();
 
         return users.stream()
-                .map(this::convertToDTO)
-                .toList();
+                .map(this::convertToBasicDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
+    @Transactional
     public UserDTO deactivateUser(Long id) {
         logger.info("Deactivating user with ID: {}", id);
         User user = userRepository.findById(id)
@@ -135,12 +200,27 @@ public class UserServiceImpl implements UserService {
         user.setActive(false);
         userRepository.save(user);
 
-        return convertToDTO(user);
+        return convertToBasicDTO(user);
     }
 
+    /**
+     * Convert User entity to UserDTO including collections
+     * @param user the user entity
+     * @return the user DTO with collections
+     */
     private UserDTO convertToDTO(User user) {
         try {
             UserDTO userDTO = modelMapper.map(user, UserDTO.class);
+
+            // Ensure collections are never null in the DTO
+            if (userDTO.getAddresses() == null) {
+                userDTO.setAddresses(new ArrayList<>());
+            }
+
+            if (userDTO.getNotificationPreferences() == null) {
+                userDTO.setNotificationPreferences(new ArrayList<>());
+            }
+
             return userDTO;
         } catch (Exception e) {
             logger.error("Error mapping User to UserDTO: {}", e.getMessage(), e);
@@ -155,12 +235,33 @@ public class UserServiceImpl implements UserService {
             userDTO.setActive(user.isActive());
             userDTO.setCreatedAt(user.getCreatedAt());
             userDTO.setLastLoginAt(user.getLastLoginAt());
-
-            // Empty collections to avoid null pointer exceptions
             userDTO.setAddresses(new ArrayList<>());
             userDTO.setNotificationPreferences(new ArrayList<>());
-
             return userDTO;
         }
+    }
+
+    /**
+     * Convert User entity to UserDTO without including collections
+     * @param user the user entity
+     * @return the user DTO without collections
+     */
+    private UserDTO convertToBasicDTO(User user) {
+        UserDTO userDTO = new UserDTO();
+        userDTO.setId(user.getId());
+        userDTO.setUsername(user.getUsername());
+        userDTO.setEmail(user.getEmail());
+        userDTO.setPhoneNumber(user.getPhoneNumber());
+        userDTO.setRole(user.getRole());
+        userDTO.setPreferredLanguage(user.getPreferredLanguage());
+        userDTO.setActive(user.isActive());
+        userDTO.setCreatedAt(user.getCreatedAt());
+        userDTO.setLastLoginAt(user.getLastLoginAt());
+
+        // Initialize empty collections
+        userDTO.setAddresses(new ArrayList<>());
+        userDTO.setNotificationPreferences(new ArrayList<>());
+
+        return userDTO;
     }
 }
